@@ -1,1 +1,2 @@
-BasicBot is an open-source, Python-based Discord bot with basic functionality including youtube playback (with queue and search support) and Teamspeak-style VC join/leave messages, role management, and keyword-based censoring. BasicBot is currently hosted with AWS EC2. Interested in how BasicBot works? Find out more at https://sites.google.com/view/discord-basicbot/.
+BasicBot is an open-source, Python-based Discord bot with basic functionality including youtube playback (with queue and search support) and Teamspeak-style VC join/leave messages, role management, and keyword-based censoring. BasicBot is currently hosted with AWS EC2.
+
