@@ -2,3 +2,4 @@
 DISCORD_BOT_TOKEN=0
 OWNER_ID=0
 OWNER_DM=0
+SITE_URL=0
